# FirstStepAI

./: .gitignore  README.md  app.py  assistant.py  prompts.py  requirements.txt  smoke_test.py
api/: .env.example  Dockerfile  alembic.ini  c1.txt  chat.txt  dev.db  dev_http.db  entrypoint.sh  phase3_http.db  phase3_smoke.db  phase4_smoke.db  phase5_smoke.db  phase6_e2e.db  phase6_smoke.db  phase7_e2e.db  phase8_dryrun.db  pyproject.toml
api/app/: __init__.py  main.py
api/app/alembic/: env.py
api/app/alembic/versions/: 0001_initial.py  0002_seed_data.py
api/app/api/v1/: __init__.py  (+1 more)
api/app/config/: __init__.py  settings.py
api/app/core/: __init__.py  deps.py  exceptions.py  rbac.py
api/app/db/: __init__.py  base.py  redis.py  session.py  types.py
api/app/models/: __init__.py  activity_log.py  conversation.py  document.py  employee.py  message.py  project.py  refresh_token.py  role_permission.py  settings.py  user.py
api/app/schemas/: __init__.py  auth.py  dashboard.py
api/app/security/: __init__.py  jwt.py  password.py  tokens.py
api/app/services/: __init__.py  activity_log_service.py  auth_service.py  chat_service.py  dashboard_service.py  document_service.py  project_service.py  settings_service.py
api/app/utils/: __init__.py  logging.py
api/data/vectorstore/: chroma.sqlite3
api/firststepai_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/scripts/: __main__.py  seed_from_json.py  smoke_phase1.py  smoke_phase1_http.py  smoke_phase3_http.py  smoke_phase4.py  smoke_phase5.py  smoke_phase6.py  test_logout.py
api/tests/: conftest.py
(+156 files in other folders)
