[project]
name = "firststepai-api"
version = "0.1.0"
description = "FirstStep AI — FastAPI backend (LangChain + Groq + Chroma + PostgreSQL)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0.30",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "asyncpg>=0.29.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.2.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2",
  "redis>=5.0.0",
  "email-validator>=2.2.0",
  # AI / RAG (preserved from existing app)
  "langchain==0.3.14",
  "langchain-community==0.3.14",
  "langchain-huggingface>=0.1.0",
  "langchain-chroma==0.2.0",
  "langchain-groq>=0.2.0",
  "chromadb==0.5.23",
  "pypdf==5.0.1",
  "python-dotenv==1.0.1",
  "Faker==30.0.0",
  "tenacity>=8.2.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
